syntax = "proto3";

message QuerySubscribeRequest {
    string Topic = 1;
    int32 Qos = 2;
}

message QueryConnectRequest {
    string ClientID = 1;
}

message DeliverMessageRequest {
    string Topic = 1;
    bytes  Payload = 2;
    int32 Qos = 3;
}

message QueryShareSubscribeRequest {
    string Topic = 1;
    int32 Qos = 2;
}

message Response {
    int32 RetCode = 1;
    string Message = 2;
}

message ShareSubscribeResponse {
    int32 RetCode = 1;
    string Message = 2;
    int32 ShareSubCount = 3;
}

//Service define
service HMQService {
    rpc QuerySubscribe(QuerySubscribeRequest) returns  (Response) {}
    rpc QueryConnect(QueryConnectRequest) returns (Response) {}
    rpc DeliverMessage(DeliverMessageRequest) returns (Response) {}
    rpc QueryShareSubscribe(QueryShareSubscribeRequest) returns (ShareSubscribeResponse) {}
}